# ha-truenas-ws

./: CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/truenas/: api.py  button.py  const.py  coordinator.py  manifest.json  models.py  update.py
custom_components/truenas_ws/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  errors.py  helpers.py  manifest.json  models.py  sensor.py  strings.json  switch.py  update.py
custom_components/truenas_ws/translations/: en.json
