[project]
name = "ha-truenas"
version = "0.1.0"
description = "TrueNAS integration for Home Assistant using JSON-RPC 2.0 WebSocket API"
requires-python = ">=3.13"
license = "MIT"

dependencies = [
    "homeassistant>=2024.3.0",
]

[project.optional-dependencies]
dev = [
    "homeassistant-stubs",
    "mypy",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "ruff",
    "codespell",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "SIM",
    "T20",
    "RUF",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
